# zero-dimension-comparison-SEI

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSES-bundled.txt  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md
examples/: capacity_fade_all_models_5cycles.ipynb  comparison_continuum_models_fig2.ipynb  comparison_exp_models_voltage_CE5.ipynb  comparsion_exp_models_voltage_CE5.ipynb  electron_limited.ipynb  solvent_limited.ipynb  style_figs.py
src/zero_dimension_comparison_sei/: __init__.py  entry_point.py
tests/generated_project_tests/: test_entry_points.py
tests/user_tests/: capacity_fade_all_models_5cycles.ipynb  comparison_continuum_models_fig2.ipynb  comparsion_exp_models_voltage_CE5.ipynb  electron_limited.ipynb  exp_models_voltage_CE5.ipynb  solvent_limited.ipynb  test_package.py
