[build-system]
requires = [
  "hatchling",
  "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "zero-dimension-comparison-SEI"
authors = [
  { name = "Kawa Manmi", email = "kawa.manmi@warwick.ac.uk" },
]
description = "The project compares different common zero-dimensional models (limited mechanisms) for solid electrolyte interphase (SEI) growth in lithium-ion batteries, focusing on the formation cycle and early cycles, using PyBaMM."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["pybamm",]

[project.optional-dependencies]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
  "nox[uv]",
  "pre-commit",
]
docs = [
  "sphinx",
  "pydata_sphinx_theme",
  "sphinx_design",
  "sphinx-copybutton",
  "myst-parser",
  "sphinx-inline-tabs",
  "sphinxcontrib-bibtex",
  "sphinx-autobuild",
  "sphinx-last-updated-by-git",
  "nbsphinx",
  "ipython",
  "sphinx-gallery",
]

[project.urls]
Homepage = "https://github.com/mmsg-warwick/zero-dimension-comparison-SEI"
"Bug Tracker" = "https://github.com/mmsg-warwick/zero-dimension-comparison-SEI/issues"
Discussions = "https://github.com/mmsg-warwick/zero-dimension-comparison-SEI/discussions"
Changelog = "https://github.com/mmsg-warwick/zero-dimension-comparison-SEI/releases"

[project.entry-points."parameter_sets"]
Chen2020 = "zero_dimension_comparison_sei.parameters.input.Chen2020:get_parameter_values"

[project.entry-points."models"]
SPM = "zero_dimension_comparison_sei.models.input.SPM:SPM"
BasicReservoir = "zero_dimension_comparison_sei.models.input.BasicReservoir:BasicReservoir"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/zero_dimension_comparison_sei/_version.py"
envs.default.dependencies = [
  "pybamm",
]

[tool.mypy]
python_version = "3.11"
strict =  false
warn_return_any = false
show_error_codes = true
enable_error_code = [
  "ignore-without-code",
  "truthy-bool",
  "redundant-expr",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["call-overload", "operator"]

[tool.coverage]
run.source = ["zero_dimension_comparison_sei"]
port.exclude_lines = [
  'pragma: no cover',
]

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  #"ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  #"RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
ignore = [
  "E741",        # Ambiguous variable name
  "E501",        # Line too long
  "PLR2004",     # Magic value used in comparison
]
line-length = 100
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
